--- a/src/app/components/Challenge/Challenge.module.scss
+++ b/src/app/components/Challenge/Challenge.module.scss
@@ -57,6 +57,7 @@
             height: 100%;
             background-size: cover;
             background-position: center;
+            object-fit: cover;
             width: 38%;
             @media (max-width: rem(992)) {
               width: 100%;
