--- a/src/app/(policy)/Policy.module.scss
+++ b/src/app/(policy)/Policy.module.scss
@@ -1,1 +1,28 @@
 @use "@/styles/mixin.scss" as *;
+
+.policyHero {
+  display: flex;
+  height: rem(148);
+  align-items: center;
+  background-image: url("/images/hero.webp");
+  //background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+}
+
+.policy {
+  margin: rem(60) 0;
+  h1 {
+    width: 100%;
+    color: #000;
+    font-size: rem(60);
+    font-weight: 500;
+    line-height: 1.4;
+    text-align: left;
+    font-family: var(--font-cabinet);
+    margin-bottom: rem(10);
+    @media (max-width: rem(992)) {
+      font-size: rem(40);
+    }
+  }
+}
