--- a/src/app/components/Footer/Footer.module.scss
+++ b/src/app/components/Footer/Footer.module.scss
@@ -5,6 +5,10 @@
     display: flex;
     gap: rem(100);
     padding-bottom: rem(40);
+    @media (max-width: rem(1200)) {
+      flex-wrap: wrap;
+      gap: rem(40);
+    }
     @media (max-width: rem(992)) {
       flex-direction: column;
       gap: rem(40);
@@ -12,12 +16,18 @@
     > div {
       &.col1 {
         width: 55%;
+        @media (max-width: rem(1200)) {
+          width: 100%;
+        }
         @media (max-width: rem(992)) {
           width: 100%;
         }
       }
       &.col2 {
         width: 20%;
+        @media (max-width: rem(1200)) {
+          width: calc(50% - rem(20));
+        }
         @media (max-width: rem(992)) {
           width: 100%;
         }
@@ -52,6 +62,9 @@
       }
       &.col3 {
         width: 20%;
+        @media (max-width: rem(1200)) {
+          width: calc(50% - rem(20));
+        }
         @media (max-width: rem(992)) {
           width: 100%;
         }
