--- a/src/app/components/Hero/Hero.module.scss
+++ b/src/app/components/Hero/Hero.module.scss
@@ -4,14 +4,8 @@
   position: relative;
   height: 100vh;
   overflow: hidden;
-  background-image: url("/images/hero.webp");
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: top center;
-  @media (max-width: rem(767)) {
-    background-image: url("/images/heroMob.webp");
-  }
-  .heroBackground {
+
+  /*.heroBackground {
     position: absolute;
     top: 0;
     left: 0;
@@ -20,6 +14,20 @@
     background-size: cover;
     background-position: center;
     display: none;
+  }*/
+  .heroBackground {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("/images/hero.webp");
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: top center;
+    @media (max-width: rem(767)) {
+      background-image: url("/images/heroMob.webp");
+    }
   }
   .body {
     position: relative;
