--- a/src/app/components/Hero/Hero.module.scss
+++ b/src/app/components/Hero/Hero.module.scss
@@ -20,7 +20,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-image: url("/images/hero.webp");
     background-attachment: fixed;
     background-size: cover;
