--- a/src/app/(policy)/Policy.module.scss
+++ b/src/app/(policy)/Policy.module.scss
@@ -11,11 +11,11 @@
 }
 
 .policy {
-  margin: rem(60) 0;
+  margin: rem(60) 0 rem(120);
   h1 {
     width: 100%;
     color: #000;
-    font-size: rem(60);
+    font-size: rem(100);
     font-weight: 500;
     line-height: 1.4;
     text-align: left;
@@ -23,6 +23,99 @@
     margin-bottom: rem(10);
     @media (max-width: rem(992)) {
       font-size: rem(40);
+    }
+  }
+  .body {
+    display: flex;
+    align-items: flex-start;
+    gap: rem(100);
+    .col1 {
+      position: sticky;
+      top: 0;
+      width: 30%;
+      > div {
+        display: flex;
+        flex-direction: column;
+        gap: rem(20);
+        a {
+          font-family: var(--font-cabinet);
+          font-size: rem(24);
+          font-weight: 400;
+          line-height: 1.2;
+          text-align: left;
+          color: #000;
+          padding-bottom: rem(8);
+          border-bottom: 1px solid #d1d5db;
+          transition: all 0.2s ease-in-out;
+          &.active {
+            font-size: rem(28);
+            font-weight: 500;
+          }
+        }
+      }
+    }
+    .col2 {
+      width: 70%;
+      h2 {
+        color: #000;
+        font-size: rem(40);
+        font-weight: 400;
+        line-height: 52px;
+        text-align: left;
+        margin: rem(60) 0 rem(16) 0;
+        strong {
+          font-weight: 400;
+        }
+        &:first-child {
+          margin-top: 0;
+        }
+      }
+      h3 {
+        font-size: rem(24);
+        font-weight: 500;
+        line-height: 1.3;
+        text-align: left;
+        margin-bottom: rem(16);
+        margin-top: rem(20);
+        strong {
+          font-weight: 500;
+        }
+      }
+      p {
+        font-size: rem(20);
+        font-weight: 400;
+        line-height: 1.3;
+        text-align: left;
+        margin-bottom: rem(16);
+      }
+      ul {
+        list-style-type: disc;
+        padding-left: rem(24);
+        display: flex;
+        flex-direction: column;
+        gap: rem(16);
+        margin-bottom: rem(16);
+        li {
+          list-style-type: disc;
+          font-size: rem(20);
+          font-weight: 400;
+          line-height: 1.3;
+          text-align: left;
+        }
+      }
+      ol {
+        display: flex;
+        flex-direction: column;
+        gap: rem(16);
+        margin-bottom: rem(16);
+        padding-left: rem(24);
+        li {
+          font-size: rem(20);
+          font-weight: 400;
+          line-height: 1.3;
+          text-align: left;
+        }
+      }
     }
   }
 }
