--- a/src/app/(policy)/Policy.module.scss
+++ b/src/app/(policy)/Policy.module.scss
@@ -12,34 +12,55 @@
 
 .policy {
   margin: rem(60) 0 rem(120);
+  @media (max-width: rem(992)) {
+    margin-bottom: rem(60);
+  }
+  .back {
+    display: flex;
+    align-items: center;
+    gap: rem(10);
+    font-size: rem(24);
+    font-weight: 500;
+    line-height: 1.2;
+    text-align: left;
+    color: #000;
+  }
   h1 {
     width: 100%;
     color: #000;
     font-size: rem(100);
     font-weight: 500;
-    line-height: 1.4;
+    line-height: 1.2;
     text-align: left;
     font-family: var(--font-cabinet);
-    margin-bottom: rem(10);
+    margin-bottom: rem(40);
     @media (max-width: rem(992)) {
       font-size: rem(40);
+      margin-bottom: rem(30);
     }
   }
   .body {
     display: flex;
     align-items: flex-start;
     gap: rem(100);
+
     .col1 {
       position: sticky;
-      top: 0;
+      top: rem(10);
       width: 30%;
+      @media (max-width: rem(992)) {
+        display: none;
+      }
       > div {
         display: flex;
         flex-direction: column;
-        gap: rem(20);
+        gap: rem(24);
+        @media (max-height: rem(800)) {
+          gap: rem(16);
+        }
         a {
           font-family: var(--font-cabinet);
-          font-size: rem(24);
+          font-size: rem(28);
           font-weight: 400;
           line-height: 1.2;
           text-align: left;
@@ -47,15 +68,24 @@
           padding-bottom: rem(8);
           border-bottom: 1px solid #d1d5db;
           transition: all 0.2s ease-in-out;
+          @media (max-height: rem(800)) {
+            font-size: rem(23);
+          }
           &.active {
-            font-size: rem(28);
+            font-size: rem(40);
             font-weight: 500;
+            @media (max-height: rem(800)) {
+              font-size: rem(28);
+            }
           }
         }
       }
     }
     .col2 {
       width: 70%;
+      @media (max-width: rem(992)) {
+        width: 100%;
+      }
       h2 {
         color: #000;
         font-size: rem(40);
@@ -69,6 +99,13 @@
         &:first-child {
           margin-top: 0;
         }
+        @media (max-width: rem(992)) {
+          margin: rem(20) 0 rem(16) 0;
+          font-size: rem(24);
+          &:first-child {
+            margin-top: 0;
+          }
+        }
       }
       h3 {
         font-size: rem(24);
@@ -80,6 +117,9 @@
         strong {
           font-weight: 500;
         }
+        @media (max-width: rem(992)) {
+          font-size: rem(18);
+        }
       }
       p {
         font-size: rem(20);
@@ -87,6 +127,9 @@
         line-height: 1.3;
         text-align: left;
         margin-bottom: rem(16);
+        @media (max-width: rem(992)) {
+          font-size: rem(16);
+        }
       }
       ul {
         list-style-type: disc;
@@ -101,6 +144,13 @@
           font-weight: 400;
           line-height: 1.3;
           text-align: left;
+          @media (max-width: rem(992)) {
+            font-size: rem(16);
+          }
+          a {
+            font-weight: 600;
+            color: #000;
+          }
         }
       }
       ol {
@@ -114,6 +164,9 @@
           font-weight: 400;
           line-height: 1.3;
           text-align: left;
+          @media (max-width: rem(992)) {
+            font-size: rem(16);
+          }
         }
       }
     }
