--- a/src/app/components/Footer/Footer.module.scss
+++ b/src/app/components/Footer/Footer.module.scss
@@ -22,6 +22,10 @@
         @media (max-width: rem(992)) {
           width: 100%;
         }
+        .logo {
+          display: flex;
+          margin-bottom: rem(40);
+        }
       }
       &.col2 {
         width: 20%;
