--- a/src/app/(policy)/Policy.module.scss
+++ b/src/app/(policy)/Policy.module.scss
@@ -11,7 +11,7 @@
 }
 
 .policy {
-  margin: rem(60) 0 rem(120);
+  margin: rem(60) 0 rem(200);
   @media (max-width: rem(992)) {
     margin-bottom: rem(60);
   }
@@ -72,10 +72,10 @@
             font-size: rem(23);
           }
           &.active {
-            font-size: rem(40);
+            //font-size: rem(30);
             font-weight: 500;
             @media (max-height: rem(800)) {
-              font-size: rem(28);
+              //font-size: rem(28);
             }
           }
         }
