--- a/src/app/components/Footer/Footer.module.scss
+++ b/src/app/components/Footer/Footer.module.scss
@@ -35,10 +35,32 @@
         @media (max-width: rem(992)) {
           width: 100%;
         }
+        .founderSection {
+          display: flex;
+          flex-direction: column;
+          gap: 4px;
+          div {
+            display: flex;
+            flex-direction: column;
+            gap: 24px;
+          }
+          .socialContainer {
+            display: flex;
+            width: 24px;
+            height: 24px;
+            padding: 5.673px 5.33px 5.515px 5.279px;
+            justify-content: center;
+            align-items: center;
+          }
+        }
         > div {
           display: flex;
           flex-direction: column;
           margin-bottom: rem(24);
+          .link {
+            border-bottom: 0.5px solid #000000;
+            width: max-content;
+          }
           span {
             color: #000000;
             font-size: rem(16);
@@ -56,11 +78,6 @@
             display: flex;
             align-items: center;
             gap: rem(10);
-            svg {
-              path {
-                stroke: #000;
-              }
-            }
           }
         }
       }
@@ -88,6 +105,7 @@
             svg {
               path {
                 stroke: #000;
+                fill: #000000;
               }
             }
           }
